[project]
name = "fdevsml-llm"
version = "0.1.0"
description = "LLM qui génère un modèle atomique à partir d'un langage naturel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community==0.4.1",
    "langchain-core==1.3.2",
    "llama-cpp-python==0.3.21",
    "langchain-huggingface==1.2.2",
    "sentence-transformers==5.4.1"
]